# sumplete

./: Cargo.toml
src/: cell.rs  cell_group.rs  cell_group_location.rs  cell_selection.rs  cell_status.rs  main.rs  permutations.rs  row.rs  strategy.rs
