[package]
name = "sumplete"
authors = ["Sam Myers <samuel.myers@protonmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitmaps = "3.2.0"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
